2006-10-27  Prakash Punnoor <prakash@punnoor.de>
	* CMakeLists.txt: detect more compilers; more FIND_PACKAGE conversions,
	revamp SIMD enabling to ensure portable code production
	
	* admin/CMakeModules/DetectCompiler.cmake: added
	
	* admin/CMakeModules/CompilerSIMD.cmake: added
	
	* src/al_mixfunc.c, src/mixaudio16.h, src/arch/i386/x86_cpu_caps_prk.c
	src/arch/i386/x86_simd_support_prk.h, src/arch/i386/mixaudio16_sse2_prk.c
	src/arch/i386/mixaudio16_mmx_prk.c, src/arch/i386/mixaudio16_sse2_prk.h
	src/arch/i386/mixaudio16_mmx_prk.h, src/arch/i386/x86_floatmul.c
	src/al_mixer.h: manually enable SIMD
	
	* src/al_siteconfig.h, src/arch/i386/x86_cpu_caps_prk.c: correct
	calling convention for ASM
	
	* src/arch/i386/x86_simd_support_prk.h: optimize setw functions, gcc 3.4
	still sucks
	
2006-10-26  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_64_linux_cpu_caps_detect_prk.yasm: typo
	
	* /admin/CMakeModules/FindConfigHelper.cmake: renamed to
	ConfigHelper.cmake
	
	* CMakeLists.txt: Don't use FIND_PACKAGE for ConfigHelper

2006-09-01  Prakash Punnoor <prakash@punnoor.de>

	* src/al_filter.c: prevent extra memory reallocation, as sizes
	are in bytes, not samples (bug spotted by Ivan Dubrov)

2006-08-29  Prakash Punnoor <prakash@punnoor.de>

	* Makefile.am: renamed FindCompilerMMXFlag.cmake to
	FindCompilerSIMDFlags.cmake

2006-08-27  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_floatmul.c: don't use SIMD routines for few
	samples (bug spotted by Ivan Dubrov)

2006-08-21  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c: Avoid access to undefined memory.

	* src/alc/alc_device.c, src/alc/alc_device.h, src/alc/alc_context.c,
	src/backends/alc_backend.h: Setting the current context to NULL has
	nothing to with pausing the context (the pause/resume backend function
	are still there for now, they should probably be used from
	alcSuspendContext/alcProcessContext). Moved mixer initialization to