@@ -1,7 +1,0 @@
-#include "al_siteconfig.h"
-#include "al_cpu_caps.h"
-
-/* stub to make linker happy */
-void _alDetectCPUCaps()
-{
-}
